--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,10 @@
-name: Deploy MkDocs site to GitHub Pages
+# .github/workflows/pages.yml
+name: Deploy MkDocs (open‑source) to GitHub Pages
 
 on:
   push:
-    branches: [main]        # 只要 main 有变更就重新发布
-  workflow_dispatch:        # 允许手动触发
+    branches: [main]      # main 分支有任何提交就重新部署
+  workflow_dispatch:      # 也允许手动触发
 
 permissions:
   contents: read
@@ -15,34 +16,35 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 拉代码（含主题等子模块）
+      # 1) 拉主仓库代码；不开启 submodules，避免再去抓私有主题
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: false
 
-      # 2. 设置 Python 并安装 MkDocs
+      # 2) 安装 Python & 依赖（开源 mkdocs-material）
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
       - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install mkdocs-material
+          # 如果你有 requirements.txt 就装它；否则这两行足够
+          pip install -r requirements.txt || true
+          pip install mkdocs mkdocs-material
 
-      # 3. 构建站点到 ./site
-      - run: mkdocs build -d site
+      # 3) 构建站点到 ./site
+      - run: mkdocs build --clean --site-dir site
 
-      # 4. 告诉 GitHub 这是要发布的静态资源
+      # 4) 告诉 GitHub 这些文件将作为 Pages 资源
       - uses: actions/configure-pages@v4
 
-      # 5. 上传生成好的静态文件作为 Artifact
+      # 5) 上传静态文件 Artifact
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./site
+          path: site
 
-      # 6. 真正部署到 gh-pages 分支
+      # 6) 部署到 gh-pages 分支 → Pages
       - uses: actions/deploy-pages@v4
